fix overflow issue in product tile feed

--- a/works/sams/css/product-feed.css
+++ b/works/sams/css/product-feed.css
@@ -34,8 +34,7 @@
 }
 
 #product-feed .product-tiles-wrap {
-  overflow-x:auto;
-  overflow-y:hidden;
+  overflow:hidden;
   white-space:nowrap;
 }
 #product-feed .product-tiles-wrap .product-tile {
